--- a/about.html
+++ b/about.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js" defer></script>
+  </head>
+  <body>
+    <nav class="header">
+      <section>
+          <h1>Shaun Gillow</h1>
+      </section>
+      <section class="header">
+      <a href="index.html">Home</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="about.html">About</a>
+      </section>
+  </nav>
+  <main>
+    <section >
+      <h1 style="text-decoration: underline;">Who am I?</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi at earum
+        fuga harum alias nobis, eaque optio laudantium dolor sed eligendi
+        consequatur distinctio aperiam accusantium, architecto exercitationem
+        perferendis minus error. Fuga dolore impedit suscipit, vero odit, sequi
+        in deleniti, odio ipsa facere et. Consequatur modi cum ullam adipisci
+        unde amet qui sed odio officia ipsa omnis earum quibusdam, dolor totam?
+      </p>
+      <img src="nyy.png" alt="New York Yankees Logo" class="nyy">
+    </section>
+  </main>
+  </body>
 </html>
