Added comments to code

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <script src="javascript.js" defer></script>
   </head>
   <body>
+    <!-- create nav screen that appears at top of screen -->
     <nav class="header">
       <section>
           <h1>Shaun Gillow</h1>
@@ -19,8 +20,10 @@
       </section>
   </nav>
   <main>
+    <!-- Answering "about me" question -->
     <section >
-      <h1 style="text-decoration: underline;">Who am I?</h1>
+      <!-- adding inline style css -->
+      <h2 style="text-decoration: underline;">Who am I?</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi at earum
         fuga harum alias nobis, eaque optio laudantium dolor sed eligendi
