--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <!-- Connects external css file for formatting. -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Connect js file for "hello world" -->
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <!-- create nav screen that appears at top of screen -->
     <nav class="header">
         <section>
             <h1>Shaun Gillow</h1>
         </section>
         <section class="header">
+            <!-- adding connections to other html files -->
         <a href="index.html">Home</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html">About</a>
@@ -20,7 +24,8 @@
     </nav>
     <main>
         <section>
-            <h1>What is my goal?</h1>
+            <!-- adding inline style css -->
+            <h2 style="text-decoration: underline;">What is my goal?</h2>
             <p>My goal is to be able to provide the customer end to end capabilities for data.</p>
             <br>
             <img class="endtoend" src="endtoend.png" alt="graphic representing end to end">
