--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <script src="javascript.js" defer></script>
   </head>
   <body>
+    <!-- create nav screen that appears at top of screen -->
     <nav>
       <section>
           <h1>Shaun Gillow</h1>
@@ -19,6 +20,7 @@
       </section>
     </nav>
     <main>
+      <!-- first part of portfolio -->
     <section class="section1" >
     <h2 style="text-decoration: underline;">Project 1</h2>
     <img class="project1" src="buffalo_bills.jpeg" alt="Buffalo Bills logo">
@@ -31,7 +33,9 @@
       amet qui sed odio officia ipsa omnis earum quibusdam, dolor totam?
     </p>
   </section>
+  <!-- second part of portfolio -->
   <section class="section2">
+    <!-- adding inline style css -->
     <h2 style="text-decoration: underline;">Project 2</h2>
     <img class="project2" src="buffalo_sabres.jpeg" alt="Buffalo Sabres logo">
     <p>
